Source/WebCore: Text manipulation should not manipulate nodes out of paragraph range https://bugs.webkit.org/show_bug.cgi?id=215406

Reviewed by Wenson Hsieh.

TextManipulationController currently does not set correct start path for insertion. Therefore, it does not mark
the nodes on the start path but out of range correctly, and may change position of those nodes by mistake. For
example, in the newly added test, text node "zero" can be moved around even though it is not in range.

API test: TextManipulation.CompleteTextManipulationShouldOnlyChangeNodesInParagraphRange

* editing/TextManipulationController.cpp:
(WebCore::TextManipulationController::replace):

Tools:
Text manipulationshould not manipulate nodes out of paragraph range
https://bugs.webkit.org/show_bug.cgi?id=215406

Reviewed by Wenson Hsieh.

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/228552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266075 268f45cc-cd09-0410-ab3c-d52691b4dbfc